历史播放列表、热歌新歌榜单、歌词、屏幕自适应

--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,7 +1,7 @@
 .button {
-  position: fixed !important;
-  right: 20px;
-  top: 5em;
+  //position: fixed !important;
+  //right: 20px;
+  //top: 5em;
   width: 30px;
   padding: 0;
   display: flex;
@@ -10,35 +10,46 @@
   border-radius: 50%;
   background: #ea4f4f;
   border: 1px solid #ea4f4f;
-  svg {
-    margin: 0 !important;
+}
+.nav {
+  //height: 30px;
+  padding: 10px;
+  background: #ea4f4f;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .navSearch{
+    height: 36px;
+    flex: 1;
+    box-sizing: border-box;
+    margin: 0 15px;
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    color: #aaa;
+    border: 1px solid #ccc;
+    background: #f5f5f9;
+    border-radius: 18px;
   }
 }
-
 .search {
   margin: 1em;
   border: 1px solid #ea4f4f;
   border-radius: 21px;
 }
 .musicBox {
-  width: 200px;
-  height: 100px;
   box-sizing: border-box;
   position: relative;
   transform-style: preserve-3d;
   transform: rotateY(25deg) rotateX(355deg) rotateZ(357deg);
-  /*设置动画 三者分别为：动画名 执行一次时间 执行方式*/
-  //animation: rotateanimation 5s ease;
-  //animation-iteration-count: infinite;/*令动画无限执行下去*/
-  //animation-timing-function: linear;/*匀速*/
-  margin:200px auto;
+  margin:25vh 30vw;
   &>div{
     position: absolute;
   }
   .front {
-    width: 150px;
-    height: 300px;
-    transform: translateZ(75px);
+    width: 40vw;
+    height: 80vw;
+    transform: translateZ(20vw);
     background:linear-gradient(to right, #bd3d13, #560200, #741b03,  #bd3d13, #560200);
     border-radius: 10px;
     display: flex;
@@ -64,34 +75,34 @@
       right: 10px;
     }
     .minC {
-      width: 80px;
-      height: 80px;
+      width: 20vw;
+      height: 20vw;
       background: #1a1010;
       border-radius: 50%;
-      margin-bottom: 30px;
+      margin-bottom: 10vw;
       box-shadow: 0 0 0 8px #fff;
     }
     .openMinC {
-      width: 80px;
-      height: 80px;
+      width: 20vw;
+      height: 20vw;
       background: #1a1010;
       border-radius: 50%;
-      margin-bottom: 30px;
+      margin-bottom: 10vw;
       box-shadow: 0 0 0 8px #fff;
       animation: openMin .5s ease;
       animation-iteration-count: infinite;/*令动画无限执行下去*/
       animation-timing-function: linear;/*匀速*/
     }
     .bigC {
-      width: 120px;
-      height: 120px;
+      width: 30vw;
+      height: 30vw;
       background: #1a1010;
       border-radius: 50%;
       box-shadow: 0 0 0 8px #fff inset;
     }
     .openBigC {
-      width: 120px;
-      height: 120px;
+      width: 30vw;
+      height: 30vw;
       background: #1a1010;
       border-radius: 50%;
       box-shadow: 0 0 0 8px #fff inset;
@@ -101,61 +112,61 @@
     }
   }
   .bottom {
-    width: 150px;
-    height: 150px;
-    transform: rotateX(270deg) translateZ(225px);
+    width: 40vw;
+    height: 40vw;
+    transform: rotateX(270deg) translateZ(60vw);
     background:#bd3d13;
     border-radius: 10px;
   }
   .back {
-    width: 150px;
-    height: 300px;
-    transform: translateZ(-75px);
+    width: 40vw;
+    height: 80vw;
+    transform: translateZ(-20vw);
     background:#bd3d13;
     border-radius: 10px;
   }
   .top {
-    width: 150px;
-    height: 150px;
-    transform: rotateX(90deg) translateZ(75px);
+    width: 40vw;
+    height: 40vw;
+    transform: rotateX(90deg) translateZ(20vw);
     background:linear-gradient(30deg, #bd3d13, #560200, #741b03,  #bd3d13, #560200);
     border-radius: 10px;
   }
   .left {
-    width: 150px;
-    height: 300px;
-    transform: rotateY(270deg) translateZ(75px);
+    width: 40vw;
+    height: 80vw;
+    transform: rotateY(270deg) translateZ(20vw);
     background:linear-gradient(-75deg, #bd3d13, #560200, #741b03,  #bd3d13, #560200);
     border-radius: 10px;
   }
   .right {
-    width: 150px;
-    height: 300px;
-    transform: rotateY(90deg) translateZ(75px);
+    width: 40vw;
+    height: 80vw;
+    transform: rotateY(90deg) translateZ(20vw);
     background:linear-gradient(90deg, #bd3d13, #560200, #741b03,  #bd3d13, #560200);
     border-radius: 10px;
   }
   @keyframes openBig{
     0%{
-      width: 120px;
-      height: 120px;
+      width: 30vw;
+      height: 30vw;
       box-shadow: 0 0 3px 8px #fff inset;
     }
     100%{
-      width: 130px;
-      height: 130px;
+      width: 33vw;
+      height: 33vw;
       box-shadow: 0 0 0 8px #fff inset;
     }
   }
   @keyframes openMin{
     0%{
-      width: 80px;
-      height: 80px;
+      width: 20vw;
+      height: 20vw;
       box-shadow: 0 0 3px 8px #fff;
     }
     100%{
-      width: 85px;
-      height: 85px;
+      width: 21vw;
+      height: 21vw;
       box-shadow: 0 0 0 8px #fff;
     }
   }
@@ -165,12 +176,43 @@
   height: 30px;
   padding: 0;
   margin: 0;
-  position: fixed;
-  top: 5em;
-  left: 20px;
-  background: #ef2525;
+  //position: fixed;
+  //top: 5em;
+  //left: 20px;
+  background: #ea4f4f;
   img{
     width: 20px;
     height: 20px;
   }
+}
+.poItem {
+  font-size: 12px;
+  img {
+    width: 20px;
+    height: 20px;
+  }
+}
+.ownSegmentedControl {
+  height: 30px;
+  border-radius: 0;
+  :global(.am-segment-item) {
+    border-radius: 0;
+  }
+}
+.scroll {
+  -webkit-overflow-scrolling: touch;
+}
+.lyric {
+  position: fixed;
+  top: 18vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90vw;
+  text-align: center;
+  font-size: 6vw;
+  font-weight: bolder;
+  background-image:linear-gradient(30deg, #bd3d13, #560200, #741b03,  #bd3d13, #560200);
+  background-clip: text;
+  color: transparent;
+
 }
