--- a/src/compoments/Drawer.less
+++ b/src/compoments/Drawer.less
@@ -1,8 +1,11 @@
 .my-drawer {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
-  transition: all linear .5s;
+  height: 100%;
+  transition-property: left, right;
+  transition-duration: .5s;
+  transition-timing-function: linear;
   z-index: 1000;
   background: #fff;
   overflow-x: hidden;
@@ -10,7 +13,7 @@
 .my-drawer-remark {
   background: rgba(0, 0, 0, .2);
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
